--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 <body>
   <main>
       <header>
-          <h1>Título do Site</h1>
+          <h1>Cursos Grátis</h1>
       </header>
      
       <article>
-        <h2>Artigo 001</h2>  
-        <P>Texto Artigo 001</P>
+        <h2>Curso de HTML5 com CSS3</h2>  
+        <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio unde odit ut voluptatem, officia fuga similique temporibus! Harum aliquid nostrum minima, itaque expedita illum. Aspernatur beatae qui nostrum tempora voluptates.</P>
       </article>
 
       <article>
-        <h2>Artigo 002</h2>  
-        <P>Texto Artigo 002</P>
+        <h2>Curso de Java</h2>  
+        <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem assumenda illo temporibus voluptas impedit. Dolores recusandae cupiditate beatae accusantium itaque, aspernatur illum ut a saepe omnis. Quaerat labore alias dicta!</P>
       </article>
 
   </main>  
