--- a/index.html
+++ b/index.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso em vídeo</title>
-    <link rel="stylesheet" href="estilos/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Curso em vídeo</title>
+  <link rel="stylesheet" href="estilos/style.css">
 </head>
+
 <body>
   <main>
-      <header>
-          <h1>Cursos Grátis</h1>
-      </header>
-     
-      <article>
-        <h2>Curso de HTML5 com CSS3</h2>  
-        <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio unde odit ut voluptatem, officia fuga similique temporibus! Harum aliquid nostrum minima, itaque expedita illum. Aspernatur beatae qui nostrum tempora voluptates.</P>
-      </article>
+    <header>
+      <h1>Cursos Grátis</h1>
+    </header>
 
-      <article>
-        <h2>Curso de Java</h2>  
-        <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem assumenda illo temporibus voluptas impedit. Dolores recusandae cupiditate beatae accusantium itaque, aspernatur illum ut a saepe omnis. Quaerat labore alias dicta!</P>
-      </article>
+    <article>
+      <h2>Curso de HTML5 com CSS3</h2>
+      <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio unde odit ut voluptatem, officia fuga
+        similique temporibus! Harum aliquid nostrum minima, itaque expedita illum. Aspernatur beatae qui nostrum tempora
+        voluptates.</P>
+    </article>
 
-  </main>  
+    <article>
+      <h2>Curso de Java</h2>
+      <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem assumenda illo temporibus voluptas impedit.
+        Dolores recusandae cupiditate beatae accusantium itaque, aspernatur illum ut a saepe omnis. Quaerat labore alias
+        dicta!</P>
+
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel, accusantium? Magni vel, sapiente placeat consequuntur quae sunt sint consequatur ipsam illum id ratione tempore doloribus in beatae alias voluptas maiores.</p>
+    </article>
+
+  </main>
 </body>
+
 </html>
