--- a/index.html
+++ b/index.html
@@ -12,24 +12,27 @@
   <main>
     <header>
       <h1>Cursos Grátis</h1>
+      <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
     </header>
 
     <article>
       <h2>Curso de HTML5 com CSS3</h2>
+      <img class="lado" src="imagens/curso-html-css.png" alt="">
       <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio unde odit ut voluptatem, officia fuga
         similique temporibus! Harum aliquid nostrum minima, itaque expedita illum. Aspernatur beatae qui nostrum tempora
         voluptates.</P>
-    </article>
-
+      </article>
+      <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
     <article>
       <h2>Curso de Java</h2>
+      <img  class="lado" src="imagens/curso-javascript.png" alt="">
       <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem assumenda illo temporibus voluptas impedit.
         Dolores recusandae cupiditate beatae accusantium itaque, aspernatur illum ut a saepe omnis. Quaerat labore alias
         dicta!</P>
 
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel, accusantium? Magni vel, sapiente placeat consequuntur quae sunt sint consequatur ipsam illum id ratione tempore doloribus in beatae alias voluptas maiores.</p>
     </article>
-
+    <p><a href="curso-js.html">Acesse o curso de Java</a></p>
   </main>
 </body>
 
